--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation "com.h2database:h2"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+
 }
 
 test {
