--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     testImplementation 'org.springframework.batch:spring-batch-test'
 
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
-
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 }
 
 test {
