--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
 
-    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.18'
+    implementation 'org.springframework:spring-oxm:5.3.11'
+//    implementation 'org.springframework.data:spring-data-jpa:2.5.4'
+
+//    implementation 'org.springframework.boot:spring-boot-starter-quartz'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 }
