--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 
     implementation 'com.thoughtworks.xstream:xstream:1.4.18'
     implementation 'org.springframework:spring-oxm:5.3.11'
-//    implementation 'org.springframework.data:spring-data-jpa:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 //    implementation 'org.springframework.boot:spring-boot-starter-quartz'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
